--- a/app/src/main/res/layout/activity_click_maraton.xml
+++ b/app/src/main/res/layout/activity_click_maraton.xml
@@ -30,23 +30,34 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/maraton_image_principal"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:layout_marginBottom="10dp"
-                        app:srcCompat="@drawable/select_image" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/maraton_name_principal"
+                        <TextView
+                            android:id="@+id/maraton_name_principal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:text="Nombre del Maraton"
+                            android:textAlignment="center"
+                            android:textColor="@color/colortitle"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:text="Nombre del Maraton"
-                        android:textAlignment="center"
-                        android:textColor="@color/colortitle"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/maraton_image_principal"
+                            android:layout_width="match_parent"
+                            android:layout_height="250dp"
+                            android:layout_marginBottom="10dp"
+                            app:srcCompat="@drawable/select_image" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
                 <LinearLayout
@@ -83,53 +94,74 @@
 
                     </LinearLayout>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content">
 
-                        <LinearLayout
-                            android:id="@+id/maraton_fecha_principal"
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/tableborder"
-                            android:orientation="horizontal"
-                            android:padding="2dp">
+                            android:layout_centerHorizontal="true"
+                            android:background="@color/colortable"
+                            android:text="Informacion de la carrera"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="16dp" />
+                    </LinearLayout>
 
-                            <LinearLayout
-                                android:layout_width="0dp"
+                    <LinearLayout
+                        android:id="@+id/maraton_fecha_principal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/tableborder"
+                        android:orientation="horizontal"
+                        android:padding="2dp">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="3"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/maraton_date"
+                                android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_weight="3"
-                                android:orientation="vertical">
+                                android:text="Date"
+                                android:textAlignment="center"
+                                android:textColor="@android:color/black"
+                                android:textSize="14dp" />
 
-                                <TextView
-                                    android:id="@+id/maraton_date"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="Date"
-                                    android:textAlignment="center"
-                                    android:textColor="@android:color/black"
-                                    android:textSize="14dp" />
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/maraton_time"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Time"
-                                    android:textAlignment="textStart"
-                                    android:textColor="@android:color/black"
-                                    android:textSize="14dp" />
-
-                            </LinearLayout>
                         </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/maraton_time"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Time"
+                                android:textAlignment="textStart"
+                                android:textColor="@android:color/black"
+                                android:textSize="14dp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/maraton_place_principal"
@@ -143,19 +175,9 @@
                             android:textColor="@android:color/black"
                             android:textSize="14dp" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:background="@color/colortable"
-                            android:text="Informacion de la carrera"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="16dp" />
                     </LinearLayout>
 
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -292,6 +314,22 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/Mensaje"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/informacion_contacto"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="5dp"
+                        android:text=""
+                        android:textAlignment="center"
+                        android:textColor="@color/colortitle"
+                        android:textSize="14dp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="5dp"
@@ -385,17 +423,6 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/Mensaje"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/informacion_contacto"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
-                    android:text=""
-                    android:textAlignment="center"
-                    android:textColor="@color/colortitle"
-                    android:textSize="14dp" />
 
             </LinearLayout>
 
