--- a/app/src/main/res/layout/activity_click_mi_maraton.xml
+++ b/app/src/main/res/layout/activity_click_mi_maraton.xml
@@ -61,47 +61,69 @@
 
                     </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/carreradescription"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Descripcion"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp" />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/carreradist"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Distancia"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2">
 
-                    <TextView
-                        android:id="@+id/carreralugar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Lugar"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp" />
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                android:id="@+id/carreraimage"
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:layout_marginLeft="4dp"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/profile" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/carreradescription"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:text="Descripcion"
+                                android:textAlignment="center"
+                                android:textColor="@android:color/black"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/carreradist"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:text="Distancia"
+                                android:textAlignment="center"
+                                android:textColor="@android:color/black"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/carreralugar"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:text="Lugar"
+                                android:textAlignment="center"
+                                android:textColor="@android:color/black"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
                 </LinearLayout>
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/carreraimage"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="4dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile" />
             </LinearLayout>
 
             <LinearLayout
@@ -352,6 +374,31 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tittray"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_below="@+id/resultadostcglobales"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
+                android:text="Trayectoria"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/graf_tiempo"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_below="@id/mapmi"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Grafica distancia-tiempo"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="15dp" />
+
+            <TextView
                 android:id="@+id/mi_maraton_name"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -388,52 +435,16 @@
                 android:textColor="@android:color/black"
                 android:textSize="15dp" />
 
-            <TextView
-                android:id="@+id/graf_tiempo"
+            <fragment
+                android:id="@+id/mapmi"
+                class="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_below="@id/resultadostcglobales"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="15dp"
-                android:textColor="@android:color/black"
-                android:textSize="15dp"
-                android:text="Grafica distancia-tiempo"
-                android:textAlignment="center" />
+                android:layout_height="200dp"
+                android:layout_below="@+id/tittray"
+                android:layout_margin="10dp" />
 
-            <TextView
-                android:id="@+id/graf_velocidad"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="10dp"
-                android:layout_below="@id/charttime"
-                android:textColor="@android:color/black"
-                android:textSize="15dp"
-                android:text="Grafica distancia-velocidad"
-                android:textAlignment="center" />
 
-            <lecho.lib.hellocharts.view.LineChartView
-                android:id="@+id/charttime"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_below="@+id/graf_tiempo"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:padding="20dp"
-                android:verticalScrollbarPosition="defaultPosition" />
 
-            <lecho.lib.hellocharts.view.LineChartView
-                android:id="@+id/chartvel"
-                android:layout_below="@+id/graf_velocidad"
-                android:layout_margin="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:padding="20dp"
-                android:verticalScrollbarPosition="defaultPosition" />
         </RelativeLayout>
     </ScrollView>
 
