--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,29 +6,21 @@
     android:background="@color/colorProfile"
     tools:context=".ProfileActivity">
 
+    <Button
+        android:id="@+id/profile_settings"
+        android:layout_width="45dp"
+        android:layout_height="55dp"
+        android:layout_alignEnd="@+id/mi_perfil_toolbar"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/editprofile"
+        android:icon="@drawable/editprofile"
+        tools:ignore="NotSibling" />
+
     <LinearLayout
+        android:id="@+id/contbuton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="6">
-
-            <Button
-                android:id="@+id/profile_settings"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_margin="5dp"
-                android:background="@drawable/editprofile"
-                android:icon="@drawable/editprofile" />
-        </LinearLayout>
     </LinearLayout>
 
     <ScrollView
@@ -106,7 +98,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
-                        android:padding="3dp"
+                        android:padding="5dp"
                         android:text="Informacion Personal"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -199,7 +191,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
-                        android:padding="3dp"
+                        android:padding="5dp"
                         android:text="Informacion de Carreras"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -453,31 +445,70 @@
                     </LinearLayout>
 
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/my_title3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/tableborder"
-                    android:padding="3sp"
-                    android:text="Avance por carreras"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colortitle"
-                    android:textSize="16sp" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/my_title_tiempo"
+                android:id="@+id/my_title3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/my_profile_information_total"
-                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:text="Avance por carreras"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/colortitle"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/my_title_tiempo"
+                android:layout_width="match_parent"
+                android:layout_below="@+id/my_title3"
+                android:layout_height="wrap_content"
+                android:background="@drawable/tableborder"
+                android:padding="3dp"
                 android:text="Tiempo por Carrera"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@android:color/background_light"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/my_title_vel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/timechart"
+                android:background="@drawable/tableborder"
+                android:padding="3dp"
+                android:text="Velocidad por Carrera"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/background_light"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/my_title_calorias"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/velchart"
+                android:background="@drawable/tableborder"
+                android:padding="3dp"
+                android:text="Calorias por Carrera"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/background_light"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/my_title_dist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/calchart"
+                android:background="@drawable/tableborder"
+                android:padding="3dp"
+                android:text="Distancia por Carrera"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/background_light"
+                android:textSize="14sp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/my_profile_pic"
@@ -487,12 +518,49 @@
                 android:layout_marginTop="5dp"
                 android:src="@drawable/profile" />
 
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/timechart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/my_title_tiempo"
+                android:layout_margin="10dp"
+                android:ellipsize="end"
+                android:singleLine="true"></com.github.mikephil.charting.charts.LineChart>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/velchart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/my_title_vel"
+                android:layout_margin="10dp"
+                android:ellipsize="end"
+                android:singleLine="true"></com.github.mikephil.charting.charts.LineChart>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/calchart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/my_title_calorias"
+                android:layout_margin="10dp"
+                android:ellipsize="end"
+                android:singleLine="true"></com.github.mikephil.charting.charts.LineChart>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/distchart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/my_title_dist"
+                android:ellipsize="end"
+                android:padding="10dp"
+                android:singleLine="false"></com.github.mikephil.charting.charts.LineChart>
 
         </RelativeLayout>
     </ScrollView>
 
     <include
         android:id="@+id/mi_perfil_toolbar"
-        layout="@layout/app_bar_layout"></include>
+        layout="@layout/app_bar_layout">
+
+    </include>
 
 </RelativeLayout>
